# sassy-factcheck-bot

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup_env.py
src/: claude_client.py  filters.py  instagram_dm_mcp.py  instagram_tools.py  mcp_server.py
src/tools/: sassy_fact_check.py  welcome_followers.py
